#15 - Fixed spacing issue with cards based on Stefan's suggestion. Cards are now evenly spaced within the card container, which removes the extra space on the right side of the container

--- a/Accio.Web/wwwroot/css/accio.css
+++ b/Accio.Web/wwwroot/css/accio.css
@@ -246,6 +246,10 @@ footer {
         font-family: var(--sansSerif);
     }
 
+#cardContainer {
+    justify-content: space-evenly;
+}
+
 /* Hogwarts Houses */
 .crest {
     position: relative;
